# Arqui.-e-Eng.-de-dados---XP

./: Aula02.ipynb  Base_de_Clientes_e_Compras.csv  aula01.ipynb  pyproject.toml  trabalho_pratico.ipynb
Semana2/: gold.py  silver.py
Semana2/bronze/: capture-portaltransparencia-bronze.py
